--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-<head></head>
+<head>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            margin-right: 4rem;
+            padding: 1rem 1rem 1rem 1rem;
+        }
+        p {
+            font-size: 24px;
+        }
+        #delight {
+            color:blue;
+        }
+    </style>
+</head>
 
 <body>
     <p>Surprise and <a id="delight">delight</a></p>
