add some more words

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             }
 
             let listsIndex = 0;
-            const bleghs = ["depose", "disappoint", "deter", "desist", "dick around", "depress", "distract"]
-            const celebrities = ["Claire Daines", "Danny DeVito", "Doug Dimmadome, owner of the Dimmsdale Dimmadome", "David Duchovney", "Ellen DeGeneres", "dry bones"]
-            const odds = ["dinosaur bones", "dine", "reprise", "decompose", "dry"]
+            const bleghs = ["depose", "disappoint", "deter", "desist", "dick around", "depress", "distract", "no dice", "destroy"]
+            const celebrities = ["Claire Daines", "Danny DeVito", "Doug Dimmadome, owner of the Dimmsdale Dimmadome", "David Duchovney", "Ellen DeGeneres", "Darkwing Duck"]
+            const odds = ["dinosaur bones", "dine", "reprise", "decompose", "doge", "Diners, Drive-ins, and Dives"]
             const lists = [bleghs, celebrities, odds]
             const clickHandler = function (element, event) {
                 const newWordIndex = getRandomIntInclusive(0, lists[listsIndex].length - 1);
