--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             let listsIndex = 0;
             const bleghs = ["depose", "disappoint", "deter", "desist", "dick around", "depress", "distract", "no dice", "destroy"]
             const celebrities = ["Claire Daines", "Danny DeVito", "Doug Dimmadome, owner of the Dimmsdale Dimmadome", "David Duchovney", "Ellen DeGeneres", "Darkwing Duck"]
-            const odds = ["dinosaur bones", "dine", "reprise", "decompose", "doge", "Diners, Drive-ins, and Dives"]
+            const odds = ["dinosaur bones", "dine", "reprise", "decompose", "doge", "Diners, Drive-ins, and Dives", "dumplings"]
             const lists = [bleghs, celebrities, odds]
             const clickHandler = function (element, event) {
                 const newWordIndex = getRandomIntInclusive(0, lists[listsIndex].length - 1);
