--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
             margin: 0;
             margin-right: 4rem;
             padding: 1rem 1rem 1rem 1rem;
-        }
-        p {
             font-size: 24px;
+        }
+        @media only screen and (max-width: 600px) {
+          body {
+            font-size: 56px;
+          }
         }
         #delight {
             color:blue;
