--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             padding: 1rem 1rem 1rem 1rem;
             font-size: 24px;
         }
-        @media only screen and (max-width: 700px) {
+        @media screen and (max-width: 700px) {
           body {
             font-size: 112px;
           }
