--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
+<!DOCTYPE html>
 <head>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      margin-right: 4rem;
-      padding: 1rem 1rem 1rem 1rem;
-      font-size: 24px;
-    }
-    @media screen and (max-width: 700px) {
-      body {
-        font-size: 112px;
-      }
-    }
-    #delight {
-      color: blue;
-    }
-  </style>
+  <title>surprise and</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-  <p>Surprise and <a id="delight">delight</a></p>
+  <p class="phrase">Surprise and <a id="delight">delight</a></p>
   <script>
     const run = () => {
       // stole from MDN
