--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
         "Claire Daines",
         "Danny DeVito",
         "Doug Dimmadome, owner of the Dimmsdale Dimmadome",
-        "David Duchovney",
         "Ellen DeGeneres",
         "Darkwing Duck",
+        "Dwayne \"The Rock\" Johnson",
+        "Diane Sawyer",
+        "D'Lo",
+        "Laura Dern",
+        "Taye Diggs",
+        "Doja Cat"
       ];
       const odds = [
         "dinosaur bones",
@@ -43,6 +48,7 @@
         "doge",
         "Diners, Drive-ins, and Dives",
         "dumplings",
+        "drag"
       ];
       const lists = [bleghs, celebrities, odds];
       const clickHandler = function (element, event) {
