--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <head>
   <title>surprise and</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-  <p class="phrase">Surprise and <a id="delight">delight</a></p>
+  <p class="phrase" aria-live="polite" aria-atomic="true">Surprise and <a id="delight" role="button">delight</a></p>
   <script>
     const run = () => {
       // stole from MDN
