--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <p class="phrase" aria-live="polite" aria-atomic="true">Surprise and <a id="delight" role="button">delight</a></p>
+  <div class="phrase" aria-live="polite" aria-atomic="true">Surprise and <span id="delight" role="button" tabindex="0">delight</span></div>
   <script>
     const run = () => {
       // stole from MDN
