--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 
 <body>
-  <div class="phrase" aria-live="polite" aria-atomic="true">Surprise and <span id="delight" role="button" tabindex="0">delight</span></div>
+  <div class="phrase" aria-live="polite" aria-atomic="true">Surprise and <span id="delight" role="button"
+      tabindex="0">delight</span></div>
   <script>
     const run = () => {
-      // stole from MDN
+      // stolen from https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random
       function getRandomIntInclusive(min, max) {
         min = Math.ceil(min);
         max = Math.floor(max);
